# mditor

./: .eslintrc.json  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  specification.md  todo.md  tsconfig.json
.github/workflows/: ci.yml  release.yml
.husky/_/: husky.sh
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src/: commands.rs  db.rs  lib.rs  main.rs
db/: schema.sql
