[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2" }
rusqlite = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
zip-rs = { package = "zip", version = "0.6" }
walkdir = "2"
diffy = "0.3"

[build-dependencies]
tauri-build = "2"
